Add clean steps to reset ontology file deployment
`make clean && make` should now report a clean state.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/case/Makefile
+++ b/case/Makefile
@@ -40,6 +40,11 @@ case.ttl: \
   $(top_srcdir)/dependencies/CASE/ontology/master/case.ttl
 	cp $< $@
 
+clean:
+	@rm -f \
+	  *.rdf \
+	  *.ttl
+
 investigation.rdf: \
   $(top_srcdir)/dependencies/CASE/ontology/investigation/investigation.ttl \
   $(RDF_TOOLKT_JAR)
