--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dependencies/CASE"]
 	path = dependencies/CASE
 	url = https://github.com/casework/CASE.git
+[submodule "dependencies/Ontospy"]
+	path = dependencies/Ontospy
+	url = https://github.com/casework/Ontospy.git
