Catch-all slash trailing, HOST_PREFIX
This commit adds a catch-all condition to the .htaccess
file to ensure that any link that ends in / will be sent
to the documentation/index.html.

In addition, the Makefile had a test updated to the
{HOST_PREFIX} directive, instead of depending on localhost.

Signed-off-by: TJ Balon <tbalon@mitre.org>

--- a/.htaccess
+++ b/.htaccess
@@ -19,6 +19,10 @@ RewriteRule ^.gitmodules$ - [R=403]
 RewriteRule ^.gitignore$ - [R=403]
 RewriteRule ^Makefile$ - [R=403]
 
+# Catch all with a trailing slash.. send to the index of documentation
+RewriteCond %{REQUEST_URI} !\.html [NC]
+RewriteRule ^(.+)/$ %{DOCUMENT_ROOT}/case/documentation/index.html [L,R=303]
+
 # Rewrite rule 3.1: to serve Turtle content is requested
 RewriteCond %{REQUEST_URI} !\.ttl [NC]
 RewriteCond %{HTTP_ACCEPT} text/turtle
