Update git submodule from CASE to UCO
This commit is the first in a series that will update
the Automated Documentation Deployment to support UCO.

Signed-off-by: TJ Balon <tbalon@mitre.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "dependencies/CASE"]
-	path = dependencies/CASE
-	url = https://github.com/casework/CASE.git
 [submodule "dependencies/Ontospy"]
 	path = dependencies/Ontospy
 	url = https://github.com/casework/Ontospy.git
+[submodule "dependencies/UCO"]
+	path = dependencies/UCO
+	url = https://github.com/ucoProject/UCO.git
