Substitute variable for hard-coded value
A follow-on patch will regenerate Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/uco/Makefile
+++ b/uco/Makefile
@@ -65,7 +65,7 @@ all: \
 	  && ontospy gendocs \
 	    --outputpath $$PWD/documentation \
 	    --theme darkly \
-	    --title uco-0.9.0-docs \
+	    --title uco-$(CURRENT_RELEASE)-docs \
 	    --type 2 \
 	    $(top_srcdir)/dependencies/UCO/tests/uco_monolithic.ttl
 	touch $@
