Align message with CASE's
Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/uco/Makefile
+++ b/uco/Makefile
@@ -17,7 +17,7 @@ top_srcdir := $(shell cd .. ; pwd)
 
 CURRENT_RELEASE ?=
 ifeq ($(CURRENT_RELEASE),)
-$(error CURRENT_RELEASE not defined; try running 'make' from top source directory ($(top_srcdir)))
+$(error CURRENT_RELEASE not defined - did you call 'make' from one directory up?)
 endif
 
 RDF_TOOLKT_JAR := $(top_srcdir)/dependencies/UCO/lib/rdf-toolkit.jar
